Fix on page not displaying on mobile and uncompatible browsers

--- a/js/components/navbar/navbar-styles.css
+++ b/js/components/navbar/navbar-styles.css
@@ -110,7 +110,7 @@ nav a:hover {
 }
 
 .logo-lettering {
-    margin-top: 0;
+    margin-top: -35px;
     font-size: 3rem;
 }
 
